--- a/fb-mini/.env
+++ b/fb-mini/.env
@@ -1,7 +1,7 @@
 
-DB_HOST=abcde.abcde
-DB_DATABASE=abcde
-DB_USER=abcde
-DB_PASSWORD=abcde
+DB_HOST=ziggy.db.elephantsql.com
+DB_DATABASE=oeenzpzg
+DB_USER=oeenzpzg
+DB_PASSWORD=xJFK1G65045qr1Y9LduY0xs6uR8iI0cT
 DB_PORT=5432
 NODE_ENV=development
