--- a/fb-mini/package.json
+++ b/fb-mini/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "casual": "^1.6.2",
     "dotenv": "^8.2.0",
-    "knex": "^0.20.15",
-    "pg": "^7.17.1"
+    "knex": "^0.21.1",
+    "objection": "^2.1.3",
+    "pg": "^8.0.3",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "eslint": "^6.7.0",
